text align fixed

--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -8,6 +8,10 @@
         padding-bottom: 45px;
     }
 
+    &__name-container {
+        text-align: left;
+    }
+
     &__name {
         font-size: 24px;
         font-weight: 500;
